Fixed spacing on the 4th title

--- a/css/about-me.css
+++ b/css/about-me.css
@@ -225,8 +225,13 @@ p{
 		padding-left: 25px;
 		padding-right: 25px;
 	}
-	
+
 	.bottom{
 		grid-template-columns: 40% 60%;
+	}
+
+	#big{
+		margin-top: -15px;
+		padding-bottom: 15px;
 	}
 }
